--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sparticuz/chromium": "^126.0.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "google-spreadsheet": "^4.1.2",
     "googleapis": "^105.0.0",
     "moment": "^2.30.1",
-    "puppeteer": "^22.13.1"
+    "puppeteer": "^22.13.1",
+    "puppeteer-core": "^22.13.1"
   }
 }
