--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "moment": "^2.30.1",
     "puppeteer": "^22.13.1",
     "puppeteer-core": "^22.13.1"
+  },
+  "devDependencies": {
+    "@netlify/plugin-schedule": "^1.0.0"
   }
 }
