--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^2.8.1",
     "@sparticuz/chromium": "^126.0.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
@@ -19,8 +20,5 @@
     "moment": "^2.30.1",
     "puppeteer": "^22.13.1",
     "puppeteer-core": "^22.13.1"
-  },
-  "devDependencies": {
-    "@netlify/plugin-schedule": "^1.0.0"
   }
 }
